# krunker-bot

./: .env  .gitignore  Cargo.toml  bot.db
migrations/: 001_create_users.sql  002_create_verifications.sql
src/: commands.rs  handler.rs  main.rs  pngrender.rs
src/bot/: commands.rs  handler.rs
src/bot/commands/: help.rs  link.rs  mod.rs  ping.rs  ranked.rs  ranked_list.rs  ranked_stats.rs  specific_match.rs  stats.rs  unlink.rs  verify.rs
src/card/: card_error.rs  card_helper.rs  context.rs  image_data.rs  mod.rs  render.rs
src/database/: mod.rs  models.rs  queries.rs
src/verification/: flow.rs
