[package]
name = "krunker-bot"
version = "0.1.0"
edition = "2024"

[dependencies]

# diiscord
serenity = "0.12.5"
tokio = { version = "1.49.0", features = [ "full" ] }
async-trait = "0.1.89"

# my own krunker api wrapper
krunker-rs = { git = "https://github.com/IrregularPersona/krunker-rs" }

# logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# time helper
chrono = "0.4.43"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# database



